--- a/r_file_v5.Rmd
+++ b/r_file_v5.Rmd
@@ -14,39 +14,32 @@ knitr::opts_chunk$set(echo = FALSE)
 load("DataProject.RData")
 ```
 Our objective is to predict the prices of residential homes in Ames, Iowa accurately by exploiting an existing dataset to its best. Our key metric will be the RMSE on test data.     
-The training data consists of a set of 66 categorical and quantitative variables extensively describing 1,095 residential homes in Ames, Iowa, and their corresponding price in dollars. 
-We want to preprocess and explore our data smartly, select the best performing features, and fit the most adapted regression model after validating the key assumptions needed to implement it.     
-  
-We will first explore our data to get intuition of an efficient model. Understanding and preprocessing the data implies that we understand what we are given, check that there are no missing values, and that R correctly categorises each regressor.
+The training data consists of 66 categorical and quantitative variables extensively describing 1,095 residential homes in Ames, Iowa, and the houses' corresponding price in dollars. 
+We will preprocess and explore our data smartly, select the best performing features, and fit the most adapted regression model after validating the key assumptions needed to implement it.     
+
+We will first explore the pre-processed data to get intuition of an efficient model. Understanding and preprocessing the data implies that we understand what we are given, check that there are no missing values, and that R correctly categorises each regressor.  
 ```{r, include = FALSE}
 # Loading the preprocessed dataset 
 home = train[,2:ncol(train)]
 #head(home)
 ```
 The data we are handling is heterogeneous, although it is presented in a structured manner. We are dealing both with categorical and quantitative variables, which we will have to preprocess separately.  
+
 `````{r, include = FALSE } 
 summary(home)
 ```
-Displaying the summary of our dataframe, there are 67 columns including the price, meaning a full model would include 66 features and an intercept, and 1,095 observations.  
-The list of features is extensive: not all regressors will be useful to predict house price.  
-The quantitative variables differ in scale and range: prices start from ~35,000 dollars, and can attain 755,000, whereas bedrooms above ground range from 1 to 8 only for instance.  
-Scaling our data could optimise model performance.  
+Displaying the summary of our dataframe, we see that a full model would include 66 features and an intercept, and 1,095 observations.  
+The list of features is extensive: not all regressors will be useful to predict house price. For instance, the variable MSZoning is expected to have much more impact on the price that the variable Heating, as the heating system is something that can be changed, whereas the location is permanent. We will perform different types of analysis to keep only the most relevant variables in our model.
   
-We first treat missing values before launching into the analysis.  
-```{r}
-cat("There are", sum(is.na(home)), "missing values in our dataframe.")
-```
-```{r}
-# Getting regressor types
-#str(home, give.attr = FALSE)
-```
-First intuition: looking at this dataset, we can see that we have a lot of regressors and that some might be more relevant than others to explain the SalePrice. For instance, the variable MSZoning is expected to have much more impact on the price that the variable Heating, as the heating system is something that can be changed, whereas the location is permanent.  
-Thus, we will perform different types of analysis to keep only the most relevant variables in our model. 
+Quantitative variables differ in scale and range: prices start from ~35,000 dollars, and can attain 755,000, whereas bedrooms above ground range from 1 to 8 only for instance.  
+This means that scaling our data could optimise model performance. 
 
-Additionally, R appears to classify some features as integers when they could be considered as factors: mainly factors related to areas and quality ratings. After debating whether we would consider Years as categories, we decided against given that we might come across a previously unencountered year in the test data which would nullify the interest of using year as a factor.
+```{r, include = FALSE}
+str(home)
+```
+R appears to cast some factors as integers: mainly areas and ratings. We decide not to consider years as factors as we want our predictions to generalise to other, unencountered years. We recast OverallQual, OverallCond, MoSold, MSSubClass and Fireplaces as factors.  
   
-All quantitative features are integers and price, the output, is the only numeric.  
-Factor variables are automatically numerically encoded by R, which assigns them to ascending levels using their alphabetical order. Note that this might bias the data by assigning a higher value to one level versus another without any ground to do so.  
+All quantitative features are integers and price, the output, is the only numeric. We know that R automatically encodes factors, and we choose to keep the by default levels, which are  alphabetically ordered. 
 ```{r}
 home$OverallQual = as.factor(home$OverallQual)
 home$OverallCond = as.factor(home$OverallCond)
@@ -56,10 +49,10 @@ home$Fireplaces = as.factor(home$Fireplaces)
 # head(home)
 ```
 
+We check there are no missing values in the pre-processed data before launching into the analysis.  
 ```{r}
-# str(home)
+cat("There are", sum(is.na(home)), "missing values in our dataframe.")
 ```
-
 \textbf{II. Exploratory data analysis / initial modeling} 
 
 1. Numerical analysis  
@@ -79,12 +72,15 @@ boxplot(home_numerical$SalePrice, main = "SalePrice")
 ```
 
 ```{r}
-cat("The mean of Saleprice is", mean(home_numerical$SalePrice), "whereas the median is higher at", median(home_numerical$SalePrice), "indicating that extreme values skew our data to the right.")
+library(e1071) 
+cat("Data skewness is", skewness(home$SalePrice))
 ```
-SalePrice is volatile with many houses to the left hand side, but with an important number of outliers to the right with extreme values which skew the data. To smoothen the output and approach a normal distribution, we will consider the log when fitting our model. 
+SalePrice is highly skewed to the right : we confirm this by noting that Saleprice mean is ~181,196 whereas the median is much lower at ~164,500. 
+SalePrice is volatile with many houses to the left hand side, but with a number of outliers to the right with extreme values. To smoothen the output and approach a normal distribution, we will consider the log when fitting our model. If this isn't enough, we might have to go a step further by either trimming or modifying outlier values to improve our generalisation error.
+
 ```{r}
 par(mfrow=c(1,3))
-hist(log(home_numerical[,"SalePrice"]))
+hist(log(home$SalePrice))
 boxplot(log(home_numerical[,"SalePrice"]))
 qqnorm(log(home_numerical$SalePrice))
 ```
@@ -106,39 +102,7 @@ boxplot((home_numerical$LotArea), main = "LotArea")
 We believe that areas, particularly LotArea, will be important when predicting SalePrice. 
 Most areas are located within [-2,2] in our pre-processed dataset, with many outliers towards the left- or the right-hand-side. 
 
-Looking at inter-feature correlations first, we observe that OverallQual is correlated to may other features on the correlation matrix. This indicates that there is a link between it and other variables. This is encouraging as it means that we would be able to remove some columns without losing too much information.
-
-The numerical features that are the most correlated with SalePrice are OverallQual, TotalBsmtSE, X1stElrSF, GrLivArea, GarageCars and GarageArea. On the contrary, MoSold, YrSold and BsmtHalfBath are poorly correlated to SalePrice. As the correlation matrix does not take into account interactions between our features in predicting sales price, we will not infer from this which variables we will keep in our final model.  
-
-## PCA 
-Given that we have 67 columns, of which 29 are quantitative, let's explore the possibilities we have to reduce our dataframe.  
-Because PCA works best with (scaled) numerical data, we will perform it on our scaled numerical feature columns. 
-```{r}
-home_numerical_output = home_numerical$SalePrice
-home_numerical_features = home_numerical[,2:ncol(home_numerical)] # we will perform the PCA analysis on this dataset. 
-```
-
-```{r}
-pca.train = home_numerical_features
-prin_comp = prcomp(pca.train, center = TRUE, scale. = TRUE)
-
-# Compute standard deviation of each principal component
-std_dev = prin_comp$sdev
-
-# Compute variance
-pr_var = std_dev^2
-prop_varex = pr_var/sum(pr_var)
-
-# Cumulative scree plot
-plot(cumsum(prop_varex), 
-     xlab = "Principal Component", 
-     ylab = "Cumulative Proportion of Variance Explained",
-     type = "b")
-
-abline(h=1, col='red')
-abline(v=23, col='black', lty = 3)
-```
-23 of our 28 numerical features account for 99% of the variance.  
+The numerical features that are the most correlated with SalePrice are OverallQual, TotalBsmtSE, X1stElrSF, GrLivArea, GarageCars and GarageArea. On the contrary, MoSold, YrSold and BsmtHalfBath are poorly correlated to SalePrice. As the correlation matrix does not take into account interactions between our features in predicting sales price, we will not infer from this which variables we will keep in our final model.
   
 3. Factor analysis  
 For our first contact with the factors, let us get a closer look at level repartition to get an idea of fragmentation within the factors.  
@@ -210,29 +174,22 @@ anova(mod1)
 # Anova on OverallQual
 mod2<-lm(SalePrice ~ OverallQual-1 , data=home)
 anova(mod2)
-
-# Anova on OverallCond
-mod3<-lm(SalePrice ~ OverallCond-1 , data=home)
-anova(mod3)
 ```
+
 Anova tests seem to show that both area and overall quality have a strong effect on SalePrice. However, here we have not accounted for the interaction between MSzoning and overall quality: to validate our conclusions, we must show that it is not significant with an ANCOVA test. 
+
 ```{r}
 # Ancova on quality and area
 mod4 = lm(SalePrice~1 + MSZoning + OverallQual + OverallQual:MSZoning, data = home)
 anova(mod4)
 ```
-Since the last p-value is big, we will consider that SalePrice will depend in a similar manner on OverallQual and MSZoning. 
-```{r}
-# Ancova on OverallQual and OverallCond
-mod5 = lm(SalePrice~1 + OverallQual + OverallCond + OverallQual:OverallCond, data = home)
-anova(mod5)
-```
+SalePrice highly depends on MSZoning, OverallQual and their interaction. So we will keep these factors.  
+
 
 \textbf{III. Modeling and diagnostics}  
-Given the volatility of Saleprice, we will work on its logarithm to smooth its distribution and improve estimated residuals homoscedasticity. 
-After manually removing poorly informative factors and other highly correlated numerical features, we start by fitting a full linear model to predict log(SalePrice).
-Looking at our dataframe, we realised that some factor columns had a lot of differents modalities, with some that appeared very few times. Thus, for more efficiency of our algorithm, we decided to group them. We performed this for Neighbourhood, RoofStyle, Condition1, ExterCond and OverallQual.
-
+Given the number of regressors, we choose a model favouring feature sparsity. We choose to use a stepwise selection procedure with an AIC criterion. 
+  
+We will predict SalePrice's logarithm to improve our target smoothness and estimated residuals homoscedasticity. In initial models we ran, we noticed that our 8 outliers were located towards the extreme bottom values of SalePrice. They prevented us from validating our postulates, mainly homoscedasticity and gaussianity. Instead of removing them, we use the winsor method to reaffect extreme values and normalise our data. Doing this greatly improves model robustness (the postulates) while diminishing our MSE on test data. 
 ```{r}
 winsor1 = function (x, fraction=.05)
 {if(length(fraction) != 1 || fraction < 0 ||fraction > 0.5) {stop("bad value for 'fraction'")}
@@ -243,6 +200,25 @@ x}
 
 home$SalePrice= (winsor1(home$SalePrice, fraction=.05))
 ```
+
+We noted earlier that many categorical variables could be considered uninformative or redundant. 
+- We removed factors with massively overrepresented categories: Street, Utilities, RoofMatl, Condition2, Heating, Electrical, Functional, GarageCond.  
+```{r, include = FALSE}
+col_to_remove = c("Street", "Utilities", "RoofMatl", "Condition2","Heating", "Electrical", "Functional", "GarageCond","Exterior1st", "Exterior2nd", "OverallCond", "HeatingQC", "SaleCondition", "BsmtFinType2","RoofStyle", "ExterQual")
+for (name in col_to_remove){cat(which(colnames(home)==name)," ")}
+```
+
+```{r, include=FALSE}
+home_streamlined = home[-c(5, 8, 21, 13, 37, 40, 51, 59, 22, 23, 17, 38, 66, 34, 20, 26)]
+```
+
+- Based on Anova tests, we removed other factors to improve model robustness: OverallCond, Exterior1st, Exterior2nd. OverallCond in particular was too specific and weakened our model by creating observations with leverage one.
+```{r}
+# Ancova on OverallQual and OverallCond
+mod5 = lm(SalePrice~1 + OverallQual + OverallCond + OverallQual:OverallCond, data = home)
+anova(mod5)
+```
+- For some features, we were not sure wether or not they had an influence, so we tested the model with and without them and removed them if they were not improving our score : HeatingQC, SaleCondition, BsmtFinType2, RoofStyle, ExterQual. 
 
 ```{r, include=FALSE}
 # Elementary pruning and regrouping of categories
@@ -276,27 +252,13 @@ table(home$OverallQual)
 levels(home$OverallQual) <- c(levels(home$OverallQual), "Very_Low") 
 home$OverallQual[home$OverallQual %in% c("-4.27238846180047", "-3.28279659466729", "-2.38962301582022")] = "Very_Low"
 ```
-
-Then, using previous analyses and deeper data exploration, we found at that some columns did not help to predict our model, as they could add redundancies or errors. Thus, we decided to remove them:   
-- We removed some features that took almost a single value for all observations: Street, Utilities, RoofMatl, Condition2, Heating, Electrical, Functional, GarageCond.  
-- We also removed some features based on Anova tests: OverallCond, Exterior1st, Exterior2nd.  
 - For some features, we were not sure wether or not they had an influence, so we tested the model with and without them and removed them if they were not improving our score : HeatingQC, SaleCondition, BsmtFinType2, RoofStyle, ExterQual. 
-
-```{r}
-col_to_remove = c("Street", "Utilities", "RoofMatl", "Condition2","Heating", "Electrical", "Functional", "GarageCond","Exterior1st", "Exterior2nd", "OverallCond", "HeatingQC", "SaleCondition", "BsmtFinType2","RoofStyle", "ExterQual")
-for (name in col_to_remove){cat(which(colnames(home)==name)," ")}
-```
-
-```{r, include=FALSE}
-home_streamlined = home[-c(5, 8, 21, 13, 37, 40, 51, 59, 22, 23, 17, 38, 66, 34, 20, 26)]
-```
-
 
 ```{r, include = FALSE}
 full_model = lm(log(SalePrice)~., data = home_streamlined)
 summary(full_model)
 ```
-Running a model with all the variables excluding the ones we just removed, we obtain an adjusted R2 of 0.90. 
+Running a model with all the variables excluding the ones we just removed, we obtain an adjusted R2 of 0.91. 
 
 According to the T test above, the variables having the most impact to explain SalePrice are the ones describing: 
 - the location of the home (e.g. MSZoning, Neighborhood)
@@ -305,21 +267,22 @@ According to the T test above, the variables having the most impact to explain S
 - # Comment/reword the specificities of some aspects of the home such as the roof (e.g. RoofStyleShed, RoofMat) and security functions (e.g. Fireplaces). 
 - the construction period (e.g. YearBuilt, YearRemodAdd)
 
-To improve model efficiency, we will perform variable step selection.
-```{r, message= FALSE, comment=FALSE}
+Many variables could be removed from our model while marginally affecting its efficiency to explain SalePrice. To improve model efficiency, we will perform a selection of variables based on forward, backward and both methods. 
+
+```{r, include = FALSE}
 # Reducing our number of features using the 3 selection methods seen in class (forward, backward, both)
 library(MASS)
 # Forward method :
 linear_select_variables_forward = stepAIC(full_model, data=home_streamlined, trace=0, direction=c("forward"), verbose = FALSE)
-#summary(linear_select_variables_forward)
+summary(linear_select_variables_forward)
 
 # Backward method
 linear_select_variables_backward = stepAIC(full_model,~., trace=0, direction=c("backward") )
-#summary(linear_select_variables_backward)
+summary(linear_select_variables_backward)
 
 # Both
 linear_select_variables_both = stepAIC(full_model, trace=0, direction=c("both"))
-#summary(linear_select_variables_both)
+summary(linear_select_variables_both)
 ```
 
 To choose among the three methods, we retrieve the AIC of each model and choose the one with the smallest AIC.  
@@ -443,6 +406,9 @@ test$OverallQual[test$OverallQual %in% c("-4.27238846180047", "-3.28279659466729
 ```{r}
 # Test error
 sqrt(mean(test$SalePrice-exp(predict.lm(linear_backward_without_outliers, test)))^2)
+```
+```{r}
+sqrt(mean(log(test$SalePrice)-predict.lm(linear_backward_without_outliers, test))^2)
 ```
 
 Confidence interval:
